--- a/application/.env
+++ b/application/.env
@@ -1,6 +1,6 @@
 # Database Configuration
 DB_HOSTNAME="localhost"
-DB_USERNAME="root"
-DB_PASSWORD=""
-DB_DATABASE="pamsimas"
+DB_USERNAME="previewomahbata"
+DB_PASSWORD="SvrOmahBata13!"
+DB_DATABASE="digipam"
 DB_DRIVER="mysqli"
